<resources>
    <string name="app_name">Mobile Library</string>
    <string name="book_name">Title</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="supplier_name">Supplier</string>
    <string name="supplier_phone">Contact</string>
    <string name="book_name_hint">Book\'s title</string>
    <string name="book_price_hint">Book\'s price</string>
    <string name="book_quantity_hint">Number of books</string>
    <string name="supplier_name_hint">Your name</string>
    <string name="supplier_phone_hint">Your phone number</string>
    <string name="price_currency">$</string>
    <string name="submit_button">SUBMIT</string>
    <string name="empty_text">Please add items!</string>
    <string name="change_photo">Click to change photo</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="add_book_title">Add Book</string>
    <string name="edit_book_title">Edit Book</string>
    <string name="unsaved_changes_message">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_dialog_message">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving_book">Error saving book.</string>
    <string name="book_saved">Book saved</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="book_name_req">Book name required</string>
    <string name="book_quantity_req">Book quantity required</string>
    <string name="supplier_name_req">Supplier name required</string>
    <string name="supplier_phone_req">Supplier phone required</string>
    <string name="book_price_req">Book price required</string>
    <string name="dummy_name">A Brief History of Time</string>
    <string name="dummy_price">17</string>
    <string name="dummy_supplier_name">Bojack</string>
    <string name="dummy_supplier_phone">123123123</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price in $</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="available_count">books available</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">123123123</string>
    <string name="sold_out">Sorry! Book out of stock.</string>
    <string name="no_less_quantity">Quantity must be positive!</string>
    <string name="buy_now">BUY\nNOW!</string>
    <string name="supplier_phone_incorrect">You need to put real phone number.</string>
    <string name="call_supplier">Call a\nsupplier</string>
</resources>
