<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListItemRoot">

    <LinearLayout style="@style/ListItem">

        <LinearLayout
            android:id="@+id/item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_book"
                style="@style/BookName"
                android:text="@string/dummy_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/text_book"
                android:orientation="horizontal">

                <TextView
                    style="@style/CurrencyText"
                    android:text="@string/price_currency" />

                <TextView
                    android:id="@+id/text_book_price"
                    style="@style/BookPrice"
                    android:text="@string/dummy_price" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_book_quantity"
                    style="@style/BookQuantity"
                    tools:text="5" />

                <TextView
                    android:id="@+id/text_available"
                    style="@style/AvailableText"
                    android:text="@string/available_count" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/buy"
            style="@style/BuyNowBtn"
            android:background="@drawable/button_shape"
            android:text="@string/buy_now" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/secondaryText"></LinearLayout>
</LinearLayout>